--- a/style.css
+++ b/style.css
@@ -158,25 +158,58 @@ header >img{
   background-color: rgb(158, 158, 219);
 }
 #collection img{
-  width: 400px;
+  width: 300px;
 }
 #collection{
   display: flex;
   justify-content: space-evenly;
+  padding-top: 350px;
+  min-width: 300px;
+  flex-wrap: wrap;
+  gap:var(--ppk-gap-m)
+}
+.product{
+  position: absolute;
 }
 .red{
-position:relative;
-top:-280px;
+position:absolute;
+top:10px;
 border: none;
-right: 50px;
+right: 20px;
 cursor: pointer;
 }
 .red img{
   width: 40px !important;
   object-fit: contain;
-  border-radius: 100%;
+  border-radius: 50%;
+}
+#buy{
+  padding-top: var(--ppk-padding-m);
+  visibility: hidden;
+  width:300px;
+  height:50px;
+  cursor:pointer
+}
+.product:hover{
+  #buy{
+    visibility: visible;
+  }
+}
+.dress:hover{
+  transform: scale(1.1);
+}
+.details >h3{
+  font-size: 20px;
+}
+.details p{
+  font-weight: bold;
+  font-size: 18px;
   
-
+  
+}
+.details>div>p:first-child{
+  text-decoration: line-through;
+  color:brown;
 }
 
 /* 
