--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ header >img{
   display:flex;
   padding: var(--ppk-padding-xl);
   flex-wrap: wrap;
-  gap:var(--ppk-gap-xl);
+  gap:var(--ppk-gap-m);
   min-width:300px;
   flex-direction: row;
   /* position: relative; */
@@ -178,6 +178,7 @@ header >img{
 }
 .product img{
   width:300px;
+  
 }
 .product{
   position:relative ; 
@@ -246,7 +247,81 @@ color: black;
   width: 300px;
 }
 
-
+.grid-container{
+  padding-top: 200px;
+  padding: var(--ppk-padding-m);
+  display:grid;
+  grid-template-columns:repeat( auto-fit, minmax(100px, 1fr) );
+  grid-template-rows: repeat(6,200px);
+  gap:var(--ppk-gap-l)
+}
+.grid-container article:first-child{
+  padding: var(--ppk-padding-s);
+  grid-column:1/2 ;
+  grid-row: 1/6;
+  background-image: url("https://peprikka.com/cdn/shop/files/950_x_1050_px_2.jpg?v=1701860778&width=750");
+  background-size:auto;
+  position: relative;
+  background-repeat: no-repeat;
+}
+.grid-container article:first-child h2{
+  position: absolute;
+  bottom:350px;
+  color: rgb(187, 164, 164);
+  font-size: 80px;
+  animation-name: font-change;
+  animation-iteration-count: infinite;
+  animation-duration: 5s;
+}
+.grid-container article:first-child h3{
+  position: absolute;
+  bottom: 320px;
+  font-size: 25px;
+}
+.grid-container article:nth-child(2){
+  grid-column:2/3 ;
+  grid-row: 2/5;
+  object-fit: contain;
+}
+.trendy>h2{
+  font-size: 40px;
+  font-weight: bold;
+}
+.trendy >p{
+  font-size: 20px;
+}
+.trendy>button{
+  width: 100px;
+  height: 30px;
+  border: none;
+  border-bottom: 5px solid saddlebrown;
+}
+.trendy  img{
+  width:400px;
+}
+.acessories img{
+  width:400px;
+  object-fit:contain;
+  height: 600px;
+}
+.grid-container article:nth-child(3){
+  grid-column: 3/4;
+  grid-row: 2/6;
+}
+.acessories >h2{
+  font-size: 40px;
+  font-weight: bold;
+}
+.acessories >p{
+  font-size: 20px;
+}
+.acessories>button{
+  width: 100px;
+  height: 30px;
+  border: none;
+  border-bottom: 5px solid saddlebrown;
+}
+}
 /* 
 animations */
 @keyframes change-background{
@@ -261,7 +336,15 @@ filter: opacity(50);
     background-image: url("https://peprikka.com/cdn/shop/files/1880x720_b_1.jpg?v=1701861221&width=1370");
   }
 }
-
+@keyframes font-change{
+  from{
+    font-size: 80px;
+  }
+  to{
+    font-size: 100px;
+    font-weight: bolder;
+  }
+}
 
 /* responsive */
 @media(max-width:1000px){
@@ -309,6 +392,7 @@ filter: opacity(50);
     .menu{
       width:30px;
     }
+
     
   }
   @media(max-width:375px){
@@ -338,6 +422,9 @@ filter: opacity(50);
     border: none;
     border-bottom: 5px solid blue;
   }
+  #collections{
+    gap:0
+  }
 }
 @media(max-width:500px){
   #hero>div>h1{
@@ -352,5 +439,18 @@ filter: opacity(50);
   #latest>h2{
     font-size: 40px;
     min-width: 350px;
+  }
+}
+/* cambiar los gap */
+@media(max-width:1210px){
+  #collections
+  {
+gap: 20px;
+  }
+}
+@media(max-width:800px){
+  #collections
+  {
+gap: 5px;
   }
 }
