--- a/style.css
+++ b/style.css
@@ -141,8 +141,9 @@ header >img{
 #share{
   position: fixed;
   top:200px;
-  right:0;
+  right:auto;
   padding: var(--ppk-padding-m);
+  z-index: 2;
 }
 #latest{
   padding: var(--ppk-gap-m);
@@ -243,88 +244,95 @@ color: black;
   text-decoration: line-through;
   color: brown;
 }
-.product1 img{
-  width: 300px;
+.trendy img{
+  width:300px;
+height: 450px;
 }
-
-.grid-container{
-  padding-top: 200px;
-  padding: var(--ppk-padding-m);
-  display:grid;
-  grid-template-columns:repeat( auto-fit, minmax(100px, 1fr) );
-  grid-template-rows: repeat(6,200px);
-  gap:var(--ppk-gap-l)
-}
-.grid-container article:first-child{
+.wrap{
+  display:flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  padding-top: 200px !important;
   padding: var(--ppk-padding-s);
-  grid-column:1/2 ;
-  grid-row: 1/6;
-  background-image: url("https://peprikka.com/cdn/shop/files/950_x_1050_px_2.jpg?v=1701860778&width=750");
-  background-size:auto;
-  position: relative;
+  gap: var(--ppk-gap-s);
+  align-items: center;
+  
+}
+.wrap >div{
+  background-image: url("https://peprikka.com/cdn/shop/files/I64A6257_1880x.jpg?v=1705476277");
+  min-width: 300px;
+  width: 400px;
+  height:650px;
   background-repeat: no-repeat;
+  position: relative;
+  background-size:cover;
 }
-.grid-container article:first-child h2{
-  position: absolute;
-  bottom:350px;
-  color: rgb(187, 164, 164);
-  font-size: 80px;
-  animation-name: font-change;
-  animation-iteration-count: infinite;
+.wrap >div>h2{
+  font-size: 40px;
+  animation-name:font-change;
   animation-duration: 5s;
-}
-.grid-container article:first-child h3{
+  animation-iteration-count: infinite;
   position: absolute;
-  bottom: 320px;
-  font-size: 25px;
+  bottom: 100px;
 }
-.grid-container article:nth-child(2){
-  grid-column:2/3 ;
-  grid-row: 2/5;
-  object-fit: contain;
+.wrap >div>h3{
+  font-size: 25px;
+  position: absolute;
+  bottom: 75px;
+}
+.trendy{
+  display: flex;
+  flex-direction: column;
+  gap: var(--ppk-gap-s);
+  width:400px;
 }
 .trendy>h2{
-  font-size: 40px;
-  font-weight: bold;
+  font-size: 30px;
+  font-weight: bolder;
+  color:black
 }
-.trendy >p{
+.trendy>p{
   font-size: 20px;
+  color:black;
 }
 .trendy>button{
-  width: 100px;
-  height: 30px;
-  border: none;
-  border-bottom: 5px solid saddlebrown;
+  width:150px;
+  height:30px;
+  background-color: rgb(121, 121, 182);
 }
-.trendy  img{
-  width:400px;
+footer{
+  padding-top: 200px;
+  display: flex;
+  flex-wrap: wrap;
 }
-.acessories img{
-  width:400px;
-  object-fit:contain;
-  height: 600px;
+.policy{
+  width:100svw;
+ padding-top: var(--ppk-padding-l);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  color:black;
+  background-color: rgb(117, 117, 163);
+height: auto;
+padding: var(--ppk-gap-s);
+  gap:var(--ppk-gap-s)
 }
-.grid-container article:nth-child(3){
-  grid-column: 3/4;
-  grid-row: 2/6;
+.policy div{
+  display: flex;
+  flex-direction: column;
+  gap: var(--ppk-gap-s);
+  
 }
-.acessories >h2{
-  font-size: 40px;
-  font-weight: bold;
-}
-.acessories >p{
+.policy div p{
   font-size: 20px;
 }
-.acessories>button{
-  width: 100px;
-  height: 30px;
-  border: none;
-  border-bottom: 5px solid saddlebrown;
-}
+.policy >div p:first-child {
+  font-weight: bold;
 }
 /* 
 animations */
-@keyframes change-background{
+@keyframes change-background{ 
+
   from{
 background-image:url("https://peprikka.com/cdn/shop/files/1880x720_1.png?v=1701863016&width=1370") ;
   }
@@ -338,10 +346,10 @@ filter: opacity(50);
 }
 @keyframes font-change{
   from{
-    font-size: 80px;
+    font-size: 40px;
   }
   to{
-    font-size: 100px;
+    font-size: 65px;
     font-weight: bolder;
   }
 }
@@ -376,7 +384,9 @@ filter: opacity(50);
   #latest>h2{
     font-size: 50px;
   }
-  
+  header{
+    width:100svw;
+  }
   }
  
   /* cambiamos la width de menu hamburgesa */
